syntax = "proto3";


package payment;
option csharp_namespace = "PaymentService.Grpc";


service PaymentService{
	rpc CreateCheckoutSession (CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
}


message CreateCheckoutSessionRequest{
	string order_id = 1;
	repeated OrderItems items = 2;
}


message CreateCheckoutSessionResponse{
	string checkout_url = 1;
}



message OrderItems{
	string product_name = 1;
	string unit_price = 2;
	uint32 quantity = 3;
}